@@ -1,7 +1,6 @@
 UIElements
 - find a way to multi-select items in a multi-select list box... can't seem to do this with boilerplate ms ui automation libraries...
 - scroll hidden items into view before acting on them
-- methods to allow access to sibling elements
 - allow user-created additions for custom object types
 - build drag and drop into elements
 - make 'items' and 'list_items' methods return the same thing, add an 'items_names' method to return what 'items' does at the moment
