@@ -2,6 +2,7 @@ v? - ????/??/??
 - fixing issue with wait_for_window sometimes not timing out - raised by mrwizard82d1
 - using (:how_many => :all) when getting elements will always return an array, even when no matching elements are found
 - comboboxes and list boxes that contain no items will now return an array (instead of nil) when asked for their items
+- adding 'next_sibling' and 'previous_sibling' methods to Bewildr::Element
 
 v0.1.11 - 2011/2/10
 - tweek to make bewildr work with IronRuby 1.1.2
